<resources>
    <string name="app_name">SegundaProva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">HOME</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="Name">name</string>
    <string name="Author">author</string>
    <string name="year">Year</string>
    <string name="episodes">Episodes</string>
    <string name="genry">Genry</string>
    <string name="rating">Rating</string>
    <string name="ongoing">OnGoing</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="altera">Alterar</string>
    <string name="buttonCadastrar">botão cadastrar</string>
    <string name="Sobre">Sobre</string>
    <string name="anibase">aniBase</string>
    <string name="logo">logo</string>
    <string name="dev">Dev George</string>
    <string name="lorem">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec maximus, enim vitae bibendum gravida, magna nibh tristique enim, id placerat ex ex gravida leo. Phasellus eget maximus ipsum, vel vulputate nibh. Phasellus vulputate massa vitae ante pellentesque faucibus. Morbi condimentum, sem sit amet vulputate gravida, sem est dapibus ligula, sit amet sodales dolor lectus a ante. Donec blandit sapien sed ex molestie rhoncus. Nullam sollicitudin semper bibendum. Aliquam pharetra bibendum ex, eget tempus tellus venenatis quis. Nam a ultrices quam. "</string>
    <string name="ajuda">Ajuda</string>
    <string name="homeAjuda">
        Aqui está listado todos os animes cadastrados,
        ao clicar rapidamente em um item da lista, será redirecionado para a pagina de detalhes.
        Ao clicar e segurar por alguns segundos, será redirecionado para a pagina de alteração.
    </string>
    <string name="detalhesAjuda">
        Aqui estarão os detalhes de do anime selecionado, estarão visiveis todos os atributos.
    </string>
    <string name="cadastraAjuda">
        Nessa pagina sera possivel cadastrar novos animes.
    </string>
    <string name="alteraAjuda">
        Sera possivel alterar cada atributo do anime selecionado.
    </string>
</resources>